--- a/trunk/CoastalGIS/CoastalGIS.MainGIS/App.config
+++ b/trunk/CoastalGIS/CoastalGIS.MainGIS/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <appSettings>
 
-    <add key ="FGDBPath" value ="F:\MGIS\MGIS.gdb"/>
-    <add key ="ConnectionString" value ="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=F:\\MGIS\\MGIS.mdb"/>
+    <add key ="FGDBPath" value ="F:\MGIS--20111028\MGIS.gdb"/>
+    <add key ="ConnectionString" value ="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=F:\MGIS--20111028\MGIS.mdb"/>
 
   </appSettings>
 </configuration>
